--- a/front/public/style.css
+++ b/front/public/style.css
@@ -5,7 +5,7 @@ body{
   }
 
   .content-div {
-    
+    position: relative;
     border-width: 5px;
     border-style: solid; 
     border-color: whitesmoke;
@@ -13,8 +13,16 @@ body{
     margin-top: 5%;
   }
 
+  .purple-border {
+    border-color: purple;
+  }
+
   .m-spacing {
     padding: 30px;
+}
+
+  .s-spacing {
+    padding: 10px;
 }
 
 .text {
@@ -22,4 +30,9 @@ body{
     font-family: Cursive;
     font-weight: bold;
     font-size: x-large;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
 }
