--- a/front/src/components/choiceBox/choiceBox.css
+++ b/front/src/components/choiceBox/choiceBox.css
@@ -12,9 +12,45 @@
     box-shadow: 5px 5px  #363434;
 }
 
+.box > [contenteditable="true"]:active, [contenteditable="true"]:focus
+{
+    border:none;
+    outline:none;
+    text-align: center;
+    font-family: Cursive;
+    font-weight: bold;
+    box-shadow: 5px 5px  #363434;
+   
+}
+
+.correct-box {
+    border: 5px solid green; 
+    border-radius: 25px;
+}
+
+.input {
+    width: 100%;
+    height:80px;
+    padding-left: 10px;
+    border-style: inset;
+    box-sizing: border-box;
+    background-color: transparent;
+    display: inline-block;
+    word-wrap: break-all;
+    
+    
+}
+
 .text {
     text-align: center;
     color: black;
     font-family: Cursive;
+    font-weight: bold;
+}
+
+.input-text {
+    text-align: center;
+    font-size:medium;
+    font-family: cursive;
     font-weight: bold;
 }
