--- a/front/src/components/choiceBox/choiceBox.css
+++ b/front/src/components/choiceBox/choiceBox.css
@@ -1,11 +1,11 @@
 .box {
     border-radius: 25px;
-    background: #bacee0;
+    background: #f8f5f5;
     padding: 20px;
     width: 100px;
     height: 100px;
     margin: 5px;
-    box-shadow: 2px 2px  #888888
+    box-shadow: 2px 2px  #868383
 }
 
 .box:hover {
@@ -33,6 +33,7 @@
     height:80px;
     padding-left: 10px;
     border-style: inset;
+    border-color: transparent;
     box-sizing: border-box;
     background-color: transparent;
     display: inline-block;
